# conf_shed

./: Dockerfile  README.md  app.sh  docker-compose.yml  mobile_openapi.yaml  pyproject.toml
conf_shed/: .env  .env-non-dev  main.py  models.py
conf_shed/migrations/: env.py
conf_shed/migrations/versions/: 25cf7c32d055_update_shedule.py  2d5b576b167f_db_remake.py
conf_shed/templates/: confshed.html  index.html  pr-reg.html  pr-regsuc.html  pr-view.html  reg.html  regsuc.html
tests/: conftest.py  test_get_conf_shed.py  test_prdelete.py
