[tool.poetry]
name = "conf-shed"
version = "0.1.0"
description = ""
authors = ["TimuR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
setuptools = "^75.1.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"
httpx = "^0.27.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.pytest.ini_options]
pythonpath = [".","conf_shed"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
